Designed simple resume template

--- a/src/app/components/previews/basic-preview/basic-preview.component.scss
+++ b/src/app/components/previews/basic-preview/basic-preview.component.scss
@@ -105,6 +105,13 @@
   text-align: center;
 }
 
+.social-simple {
+  align-items: center;
+  text-align: center;
+  background-color: gray;
+  padding: 10px;
+}
+
 .side-social {
   width: 100%;
 }
