--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,11 @@
     <button mat-icon-button>
       <mat-icon>menu</mat-icon>
     </button>
-    <div class="mat-typography" >
-      <a routerLink="/home">
-      <i><h1 class="mat-headline">Your RESUME</h1></i>
+    <div>
+      <a routerLink="/home" class="appname">
+      <i><h1 class="mat-headline">Your RESUME</h1></i>      
       </a>
+      
     </div>
     <span class="menu-spacer"></span>
     <div>
