--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,8 @@
 // .navigation-bar {
-//     background-color: blueviolet;
+//     background-color : lightseagreen;
 // }
+
+.appname {
+  text-decoration: none;
+  color: #545396;
+}
