--- a/src/app/components/resumes/basic-resume/basic-resume.component.scss
+++ b/src/app/components/resumes/basic-resume/basic-resume.component.scss
@@ -3,8 +3,23 @@
   font-family: "Raleway";
 }
 
+.settings-card {
+  margin-top: 10px;
+  border-radius: 50px !important;
+}
+
+.editor {
+ //text-align: center;
+ margin-top: 20px;
+ margin-left: 100px;
+ font-size: 30px;
+ font-weight: bolder;
+ font-family: Arial, Helvetica, sans-serif;
+ color: white;
+}
+
 .resume-card {
-  margin-top: 50px;
+  margin-top: 20px;
   margin-left: 100px;
   margin-right: 100px;
   margin-bottom: 70px;
@@ -46,6 +61,7 @@
 
 .text-area {
   white-space: pre-wrap;
+  font-family: "Hind";
 }
 
 .example-button-row {
